# OpenWorldLib-extension-VLA

./: README.md  README_zh.md  pyproject.toml  requirements.txt
data/test_case/test_vla_case1/: config_qact_from_vlm.yml  qwen25_config.json
src/openworldlib/operators/: base_operator.py  emu3p5_operator.py  wall_oss_operator.py
src/openworldlib/pipelines/: pipeline_utils.py
src/openworldlib/pipelines/emu/: pipeline_emu3p5.py
src/openworldlib/pipelines/wall_oss/: pipeline_wall_oss.py
src/openworldlib/synthesis/: base_synthesis.py
src/openworldlib/synthesis/visual_generation/emu/: emu3p5_synthesis.py
src/openworldlib/synthesis/visual_generation/emu/emu3p5/: config.py
src/openworldlib/synthesis/visual_generation/emu/emu3p5/emu3p5/: modeling_emu3.py
src/openworldlib/synthesis/visual_generation/emu/emu3p5/utils/: generation_utils.py  logits_processor.py  model_utils.py  video_utils.py  vis_proto.py
src/openworldlib/synthesis/visual_generation/emu/emu3p5/vision_tokenizer/: __init__.py
src/openworldlib/synthesis/visual_generation/emu/emu3p5/vision_tokenizer/modules/vqvae/: quantize.py
src/openworldlib/synthesis/vla_generation/wall_oss/: wall_oss_synthesis.py
test/: test_emu3p5.py  test_wall_oss.py
